[package]
name = "servo_allocator"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true

[lib]
path = "lib.rs"

[features]
allocation-tracking = ["backtrace", "fnv"]
use-system-allocator = ["libc"]

[dependencies]
backtrace = { workspace = true, optional = true }
fnv = { workspace = true, optional = true }

[target.'cfg(not(any(windows, target_env = "ohos")))'.dependencies]
libc = { workspace = true, optional = true }
tikv-jemalloc-sys = { workspace = true }
tikv-jemallocator = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = ["Win32_System_Memory"] }

[target.'cfg(target_env = "ohos")'.dependencies]
libc = { workspace = true }
