[package]
name = "servo-allocator"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true
repository.workspace = true
description.workspace = true

[lib]
path = "lib.rs"

[features]
default = ["use-jemalloc"]
allocation-tracking = ["backtrace", "dep:rustc-hash", "log"]
use-system-allocator = []
use-jemalloc = ["dep:tikv-jemalloc-sys", "dep:tikv-jemallocator"]

[dependencies]
backtrace = { workspace = true, optional = true }
log = { workspace = true, optional = true }
rustc-hash = { workspace = true, optional = true }

[target.'cfg(not(any(windows, target_env = "ohos")))'.dependencies]
libc = { workspace = true }
tikv-jemalloc-sys = { workspace = true, optional = true }
tikv-jemallocator = { workspace = true, optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = ["Win32_System_Memory"] }

[target.'cfg(target_env = "ohos")'.dependencies]
libc = { workspace = true }
