[package]
name = "app_units"
version = "0.1.0"
authors = ["The Servo Project Developers"]
description = "Servo app units type (Au)"
documentation = "http://doc.servo.org/app_units/"
repository = "https://github.com/servo/app_units"
license = "MIT / Apache-2.0"

[dependencies]
serde = "0.6"
serde_macros = "0.5"
rustc-serialize = "0.3"
euclid = "0.2"
