[package]
name = "servo_atoms"
version = "0.0.1"
authors = ["The Servo Project Developers"]
license = "MPL-2.0"
publish = false
build = "build.rs"
workspace = "../.."

[lib]
path = "lib.rs"

[dependencies]
string_cache = {version = "0.6", features = ["heapsize"]}

[build-dependencies]
string_cache_codegen = "0.4"
