[package]
name = "servo_atoms"
version = "0.0.1"
authors = ["The Servo Project Developers"]
license = "MPL-2.0"
edition = "2018"
publish = false
build = "build.rs"

[lib]
path = "lib.rs"

[dependencies]
string_cache = { workspace = true }

[build-dependencies]
string_cache_codegen = { workspace = true }
