[package]
name = "servo-bluetooth"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true
repository.workspace = true
description.workspace = true

[lib]
name = "bluetooth"
path = "lib.rs"

[dependencies]
base = { workspace = true }
bitflags = { workspace = true }
bluetooth_traits = { workspace = true }
blurmock = { version = "0.1.2", optional = true }
embedder_traits = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
servo-config = { workspace = true }
uuid = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
blurz = { version = "0.3", optional = true }

[target.'cfg(target_os = "android")'.dependencies]
blurdroid = { version = "0.1.2", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
blurmac = { workspace = true, optional = true }

[features]
default = ["bluetooth-test"]
bluetooth-test = ["blurmock"]
native-bluetooth = ["bluetooth-test", "blurdroid", "blurmac", "blurz"]
