[package]
name = "servo-bluetooth"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true
repository.workspace = true
description.workspace = true

[lib]
name = "servo_bluetooth"
path = "lib.rs"

[dependencies]
bitflags = { workspace = true }
blurmock = { version = "0.1.2", optional = true }
btleplug = { version = "0.12", optional = true }
embedder_traits = { workspace = true }
futures = { workspace = true, features = ["executor"] }
log = { workspace = true }
rand = { workspace = true }
servo-base = { workspace = true }
servo-bluetooth-traits = { workspace = true }
servo-config = { workspace = true }
tokio = { workspace = true, features = ["rt", "time", "sync"], optional = true }
uuid = { workspace = true }

[features]
default = ["bluetooth-test"]
bluetooth-test = ["blurmock"]
native-bluetooth = ["bluetooth-test", "btleplug", "tokio"]
