[package]
name = "bluetooth_traits"
version = "0.0.1"
authors = ["The Servo Project Developers"]
license = "MPL-2.0"
edition = "2018"
publish = false

[lib]
name = "bluetooth_traits"
path = "lib.rs"

[dependencies]
embedder_traits = { path = "../embedder_traits" }
ipc-channel = "0.14"
regex = "1.1"
serde = "1.0"
