[package]
name = "canvas"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true

[lib]
name = "canvas"
path = "lib.rs"

[features]
tracing = ["dep:tracing"]
vello = ["dep:vello", "dep:pollster", "dep:futures-intrusive", "dep:peniko"]
vello_cpu = ["dep:vello_cpu", "dep:peniko"]

[dependencies]
base = { workspace = true }
bytemuck = { workspace = true, features = ["extern_crate_alloc"] }
canvas_traits = { workspace = true }
compositing_traits = { workspace = true }
crossbeam-channel = { workspace = true }
euclid = { workspace = true }
fonts = { path = "../fonts" }
futures-intrusive = { version = "0.5", optional = true }
kurbo = { workspace = true }
log = { workspace = true }
peniko = { workspace = true, optional = true }
pixels = { path = "../pixels" }
profile_traits = { workspace = true }
pollster = { version = "0.4", optional = true }
rustc-hash = { workspace = true }
servo-tracing = { workspace = true }
servo_config = { path = "../config" }
stylo = { workspace = true }
tracing = { workspace = true, optional = true }
vello = { workspace = true, optional = true }
vello_cpu = { workspace = true, optional = true }
webrender_api = { workspace = true }
