[package]
name = "servo-canvas"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true
repository.workspace = true
description.workspace = true

[lib]
name = "canvas"
path = "lib.rs"

[features]
tracing = ["dep:tracing"]
vello = ["dep:vello", "dep:pollster", "dep:futures-intrusive"]

[dependencies]
base = { workspace = true }
bytemuck = { workspace = true, features = ["extern_crate_alloc"] }
canvas_traits = { workspace = true }
crossbeam-channel = { workspace = true }
euclid = { workspace = true }
fonts = { workspace = true }
futures-intrusive = { version = "0.5", optional = true }
kurbo = { workspace = true }
log = { workspace = true }
paint_api = { workspace = true }
peniko = { workspace = true }
pixels = { workspace = true }
profile_traits = { workspace = true }
pollster = { version = "0.4", optional = true }
rustc-hash = { workspace = true }
servo-tracing = { workspace = true }
servo-config = { workspace = true }
stylo = { workspace = true }
tracing = { workspace = true, optional = true }
vello = { workspace = true, optional = true }
vello_cpu = { workspace = true }
webrender_api = { workspace = true }
