[package]
name = "canvas_traits"
version = "0.0.1"
authors = ["The Servo Project Developers"]
license = "MPL-2.0"
edition = "2018"
publish = false

[lib]
name = "canvas_traits"
path = "lib.rs"

[features]
webgl_backtrace = []

[dependencies]
cssparser = "0.25"
euclid = "0.19"
ipc-channel = "0.11"
gleam = "0.6.7"
lazy_static = "1"
malloc_size_of = { path = "../malloc_size_of" }
malloc_size_of_derive = { path = "../malloc_size_of_derive" }
offscreen_gl_context = {version = "0.21", features = ["serde"]}
pixels = {path = "../pixels"}
profile_derive = {path = "../profile_derive"}
profile_traits = {path = "../profile_traits"}
serde = "1.0"
serde_bytes = "0.10"
servo_config = {path = "../config"}
webrender_api = {git = "https://github.com/servo/webrender", features = ["ipc"]}
