[package]
name = "servo_cdp"
version = "0.0.1"
authors = ["The Servo Project Developers"]
license = "MPL-2.0"
publish = false

[lib]
name = "servo_cdp"
path = "lib.rs"

[dependencies]
bincode = "0.8"
cdp_traits = {path = "../cdp_traits"}
futures = "0.1"
ipc-channel = "0.8"
log = "0.3"
msg = {path = "../msg"}
script_traits = {path = "../script_traits"}
serde = "1.0"
serde_json = "1.0"
servo_config = {path = "../config"}
servo_url = {path = "../url"}
tokio-core = "0.1"
tokio-service = "0.1"

[dependencies.cdp]
git = "https://github.com/devtools-html/cdp"
rev = "0b3a0ba2a71b36324a8f465cc47eaaa2762b8d59"

[dependencies.tokio-cdp]
git = "https://github.com/devtools-html/tokio-cdp"
rev = "c23b7a36986c2f3ae7aaf947a9475618395b7758"
