[package]
name = "compositing"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true

[lib]
name = "compositing"
path = "lib.rs"

[features]
default = []
tracing = ["dep:tracing"]
webxr = ["dep:webxr"]

[lints.clippy]
unwrap_used = "deny"
panic = "deny"

[dependencies]
base = { workspace = true }
bincode = { workspace = true }
bitflags = { workspace = true }
compositing_traits = { workspace = true }
constellation_traits = { workspace = true }
crossbeam-channel = { workspace = true }
dpi = { workspace = true }
embedder_traits = { workspace = true }
euclid = { workspace = true }
gleam = { workspace = true }
image = { workspace = true }
ipc-channel = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
malloc_size_of = { workspace = true }
pixels = { path = "../pixels" }
profile_traits = { workspace = true }
rustc-hash = { workspace = true }
servo-tracing = { workspace = true }
servo_allocator = { path = "../allocator" }
servo_config = { path = "../config" }
servo_geometry = { path = "../geometry" }
stylo_traits = { workspace = true }
timers = { path = "../timers" }
tracing = { workspace = true, optional = true }
webrender = { workspace = true }
webrender_api = { workspace = true }
webxr = { path = "../webxr", optional = true }
wr_malloc_size_of = { workspace = true }

[dev-dependencies]
surfman = { workspace = true }
