[package]
name = "servo_config"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true

[lib]
name = "servo_config"
path = "lib.rs"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
servo_config_macro = { path = "macro" }
servo_url = { path = "../url" }
style_config = { workspace = true }
