[package]
name = "servo-config"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true

[lib]
name = "servo_config"
path = "lib.rs"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
servo_config_macro = { package = "servo-config-macro", path = "macro" }
servo_url = { package = "servo-url", path = "../url" }
stylo_static_prefs = { workspace = true }
