[package]
name = "servo-constellation"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true
repository.workspace = true
description.workspace = true

[lib]
name = "servo_constellation"
path = "lib.rs"

[features]
default = []
bluetooth = ["servo-bluetooth-traits"]
gamepad = ["embedder_traits/gamepad"]
tracing = ["dep:tracing", "servo-canvas/tracing"]
vello = ["servo-canvas/vello"]
webgpu = ["dep:webgpu", "dep:webgpu_traits", "script_traits/webgpu"]

[lints.clippy]
unwrap_used = "deny"
panic = "deny"

[dependencies]
accesskit = { workspace = true }
backtrace = { workspace = true }
base64 = { workspace = true }
content-security-policy = { workspace = true }
crossbeam-channel = { workspace = true }
devtools_traits = { workspace = true }
embedder_traits = { workspace = true }
euclid = { workspace = true }
fonts = { workspace = true }
ipc-channel = { workspace = true }
keyboard-types = { workspace = true }
layout_api = { workspace = true }
log = { workspace = true }
media = { workspace = true }
net = { workspace = true }
net_traits = { workspace = true }
paint_api = { workspace = true }
parking_lot = { workspace = true }
profile_traits = { workspace = true }
rand = { workspace = true }
rustc-hash = { workspace = true }
script_traits = { workspace = true }
serde = { workspace = true }
servo-background-hang-monitor = { workspace = true }
servo-background-hang-monitor-api = { workspace = true }
servo-base = { workspace = true }
servo-bluetooth-traits = { workspace = true, optional = true }
servo-canvas = { workspace = true }
servo-canvas-traits = { workspace = true }
servo-config = { workspace = true }
servo-constellation-traits = { workspace = true }
servo-tracing = { workspace = true }
servo-url = { workspace = true }
servo-wakelock = { workspace = true }
storage_traits = { workspace = true }
stylo = { workspace = true }
stylo_traits = { workspace = true }
tracing = { workspace = true, optional = true }
webgpu = { workspace = true, optional = true }
webgpu_traits = { workspace = true, optional = true }
webxr-api = { workspace = true }

[target.'cfg(any(target_os="macos", all(not(target_os = "windows"), not(target_os = "ios"), not(target_os="android"), not(target_env="ohos"), not(target_arch="arm"), not(target_arch="aarch64"))))'.dependencies]
gaol = "0.2.1"
