[package]
name = "constellation"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true

[lib]
name = "constellation"
path = "lib.rs"

[features]
default = []
bluetooth = ["bluetooth_traits"]
gamepad = ["embedder_traits/gamepad"]
tracing = ["dep:tracing", "canvas/tracing"]
vello = ["canvas/vello"]
webgpu = ["script_traits/webgpu"]

[lints.clippy]
unwrap_used = "deny"
panic = "deny"

[dependencies]
background_hang_monitor = { path = "../background_hang_monitor" }
background_hang_monitor_api = { workspace = true }
backtrace = { workspace = true }
base = { workspace = true }
bluetooth_traits = { workspace = true, optional = true }
canvas = { path = "../canvas" }
canvas_traits = { workspace = true }
constellation_traits = { workspace = true }
content-security-policy = { workspace = true }
crossbeam-channel = { workspace = true }
devtools_traits = { workspace = true }
embedder_traits = { workspace = true }
euclid = { workspace = true }
fonts = { path = "../fonts" }
ipc-channel = { workspace = true }
keyboard-types = { workspace = true }
layout_api = { workspace = true }
log = { workspace = true }
media = { path = "../media/media-thread" }
net = { path = "../net" }
net_traits = { workspace = true }
paint_api = { workspace = true }
parking_lot = { workspace = true }
profile = { path = "../profile" }
profile_traits = { workspace = true }
rand = { workspace = true }
rustc-hash = { workspace = true }
script_traits = { workspace = true }
serde = { workspace = true }
servo-tracing = { workspace = true }
servo_config = { path = "../config" }
servo_url = { path = "../url" }
storage_traits = { workspace = true }
stylo = { workspace = true }
stylo_traits = { workspace = true }
tracing = { workspace = true, optional = true }
webgpu = { path = "../webgpu" }
webgpu_traits = { workspace = true }
webrender = { workspace = true }
webrender_api = { workspace = true }
webxr-api = { workspace = true }

[target.'cfg(any(target_os="macos", all(not(target_os = "windows"), not(target_os = "ios"), not(target_os="android"), not(target_env="ohos"), not(target_arch="arm"), not(target_arch="aarch64"))))'.dependencies]
gaol = "0.2.1"
