[package]
name = "deny_public_fields"
version = "0.0.1"
authors = ["The Servo Project Developers"]
license = "MPL-2.0"
edition = "2018"
publish = false

[lib]
path = "lib.rs"
proc-macro = true

[dependencies]
syn = { version = "1", default-features = false, features = ["derive", "parsing"] }
synstructure = "0.12"
