[package]
name = "servo-deny-public-fields"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true
repository.workspace = true
description.workspace = true

[lib]
path = "lib.rs"
proc-macro = true

[dependencies]
syn = { workspace = true }
synstructure = { workspace = true }
