[package]
name = "servo-devtools"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true
repository.workspace = true
description.workspace = true

[lib]
name = "devtools"
path = "lib.rs"

[dependencies]
atomic_refcell = { workspace = true }
base = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
crossbeam-channel = { workspace = true }
devtools_traits = { workspace = true }
embedder_traits = { workspace = true }
headers = { workspace = true }
http = { workspace = true }
log = { workspace = true }
malloc_size_of = { workspace = true }
malloc_size_of_derive = { workspace = true }
net = { workspace = true }
net_traits = { workspace = true }
profile_traits = { workspace = true }
rand = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
servo-config = { workspace = true }
servo-url = { workspace = true }
uuid = { workspace = true }

[build-dependencies]
chrono = { workspace = true }
