[package]
name = "devtools_traits"
version = "0.0.1"
authors = ["The Servo Project Developers"]
license = "MPL-2.0"
publish = false

[lib]
name = "devtools_traits"
path = "lib.rs"

[dependencies]
bitflags = "0.7"
heapsize = "0.3.0"
heapsize_derive = "0.1"
hyper = "0.9.9"
hyper_serde = "0.5"
ipc-channel = "0.7"
msg = {path = "../msg"}
serde = "0.9"
serde_derive = "0.9"
servo_url = {path = "../url"}
time = "0.1"
