[package]
name = "devtools_traits"
version = "0.0.1"
authors = ["The Servo Project Developers"]
license = "MPL-2.0"
publish = false

[lib]
name = "devtools_traits"
path = "lib.rs"

[dependencies]
bitflags = "0.7"
heapsize = "0.4"
heapsize_derive = "0.1"
hyper = "0.10"
hyper_serde = "0.7"
ipc-channel = "0.9"
msg = {path = "../msg"}
serde = "1.0"
servo_url = {path = "../url"}
time = "0.1"
