[package]
name = "servo-dom-struct"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["extra-traits", "full", "parsing", "printing", "proc-macro"] }

[lib]
path = "lib.rs"
proc-macro = true
