[package]
name = "domobject_derive"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "lib.rs"
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
