[package]
name = "embedder_traits"
version = "0.0.1"
authors = ["The Servo Project Developers"]
license = "MPL-2.0"
publish = false

[lib]
name = "embedder_traits"
path = "lib.rs"

[features]
tests = []

[dependencies]
crossbeam-channel = "0.2"
ipc-channel = "0.10"
lazy_static = "1"
msg = {path = "../msg"}
serde = "1.0"
servo_url = {path = "../url"}
style_traits = {path = "../style_traits"}
webrender_api = {git = "https://github.com/servo/webrender", features = ["ipc"]}
