[package]
name = "embedder_traits"
version = "0.0.1"
authors = ["The Servo Project Developers"]
license = "MPL-2.0"
publish = false

[lib]
name = "embedder_traits"
path = "lib.rs"

[dependencies]
ipc-channel = "0.11"
keyboard-types = {version = "0.4.2-servo", features = ["serde"]}
lazy_static = "1"
log = "0.4"
msg = {path = "../msg"}
serde = "1.0"
servo_channel = {path = "../channel"}
servo_url = {path = "../url"}
style_traits = {path = "../style_traits"}
webrender_api = {git = "https://github.com/servo/webrender", features = ["ipc"]}
